@@ -1,3 +1,7 @@
+2007-02-21  Yvan Vanhullebus  <vanhu@netasq.com>
+	* src/racoon/ipsec_doi.c: block variable declaration before code
+	  in ipsecdoi_id2str().
+	
 2007-02-20  Yvan Vanhullebus  <vanhu@netasq.com>
 	* src/racoon/{handler.c|isakmp_var.h}: updated delete_spd() calls.
 	* src/racoon/isakmp.c: Only delete a generated SPD if it's
